hphp/test/slow/using/await_as_expr_in_using.php.expectf

Fatal error: Await cannot be used as an expression in %s/await_as_expr_in_using.php on line 9
